# chordchemists-multiagentsys

./: .gitignore  agents.py  main.py  requirements.txt  tasks.py  tools.py
.gradio/flagged/: dataset1.csv
backend/: .gitignore  README.md  api.py  generator.py  main.py  tasks.py
backend/data/: SongDBAll.txt  chords_data.txt  combine-songs.py
backend/new-crew/chordchemists/: README.md  pyproject.toml
backend/new-crew/chordchemists/src/chordchemists/: crew.py
data/: Bsectionrules.txt
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/guitar/: page.tsx
frontend/src/app/guitar/components/: ChordVisualizer.css  ChordVisualizer2.js  Flow2.tsx
frontend/src/app/guitar/components/nodes2/: TextUpdaterNode.jsx
frontend/src/components/: ChordFetcher.js  ChordVisualizer.css  ChordVisualizer.js  ExportButton.js  Flow.tsx  SequenceDisplay.tsx
frontend/src/components/edges/: index.ts
frontend/src/components/nodes/: TextUpdaterNode.jsx  index.ts
frontend/src/constants/: constants.ts
frontend/src/utils/: midiexporter.js  playChords.js
new-crew/chordchemists/src/chordchemists/: main.py
new-crew/chordchemists/src/chordchemists/config/: agents.yaml  tasks.yaml
