[project]
name = "chordchemists"
version = "0.1.0"
description = "chordchemists using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
chordchemists = "chordchemists.main:run"
run_crew = "chordchemists.main:run"
train = "chordchemists.main:train"
replay = "chordchemists.main:replay"
test = "chordchemists.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.scripts]
